# gemseo-calibration

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CHANGELOG.rst  CREDITS.md  CREDITS.rst  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
doc_src/examples/calibration/: README.rst  plot_calibration.py  plot_calibration_1param.py  plot_calibration_with_mesh.py  plot_calibration_with_missing_values.py  plot_calibration_with_noise.py
docs/: credits.md.jinja  licenses.md
docs/examples/calibration/: README.md  plot_calibration.py  plot_calibration_1param.py  plot_calibration_constraint.py  plot_calibration_with_mesh.py  plot_calibration_with_missing_values.py  plot_calibration_with_noise.py  plot_chain.py  plot_constraint.py  plot_mda.py  plot_mesh.py  plot_missing_values.py  plot_noise.py  plot_ode.py  plot_one_parameter.py  plot_two_parameters.py
public/: versions.json
public/3.0.0/: objects.inv
public/3.0.0/licenses/: index.html
public/3.0.0/reference/gemseo_calibration/: index.html
public/3.0.0/search/: search_index.json
public/3.0.0/user_guide/: index.html
public/4.0.0/: index.html  objects.inv
public/4.0.0/reference/SUMMARY/: index.html
public/4.0.0/reference/gemseo_calibration/: index.html
public/4.0.0/search/: search_index.json
public/develop/: 404.html  index.html  objects.inv  sitemap.xml
public/develop/changelog/: index.html
public/develop/credits/: index.html
public/develop/licenses/: index.html
public/develop/reference/SUMMARY/: index.html
public/develop/reference/gemseo_calibration/: index.html
public/develop/search/: search_index.json
public/develop/user_guide/: index.html
requirements/: check.txt  dist.txt  doc.txt  test-python3.10.txt  test-python3.11.txt  test-python3.12.txt  test-python3.7.txt  test-python3.8.txt  test-python3.9.txt
src/gemseo_calibration/: CalibrationScenario_input.json  CalibrationScenario_output.json  __init__.py  calibrator.py  measure.py  post_processor.py  scenario.py
src/gemseo_calibration/measures/: __init__.py  factory.py  iae.py  integrated_measure.py  ise.py  mae.py  mean_measure.py  mse.py
src/gemseo_calibration/metrics/: __init__.py  base_calibration_metric.py  base_integrated_metric.py  base_mean_metric.py  factory.py  iae.py  ise.py  mae.py  mse.py  settings.py
src/gemseo_calibration/post/: __init__.py  _matplotlib_multiple_scatter.py  factory.py  multiple_scatter.py
src/gemseo_calibration/post/data_versus_model/: DataVersusModel_options.json  __init__.py  post.py  settings.py
src/gemseo_calibration/problems/: __init__.py
src/gemseo_calibration/problems/signal/: __init__.py  (+1 more)
src/gemseo_calibration/signal/: __init__.py  base_signal_generator.py  ode_signal_generator.py  signal_generator_discipline.py
tests/: NewCalibrationPostProcessor_options.json  conftest.py  test_calibrator.py  test_measure.py  test_post_processor.py  test_scenario.py  test_scenario_with_meshed_output.py
tests/data/: NewCalibrationPostProcessor_options.json  measures.py  post.py
tests/measures/: test_ise_interpolation.py  test_mae.py  test_mean_error.py  test_mse.py
tests/post/: test_factory.py  test_multiple_scatter.py
tests/post/data_versus_model/: test_data_versus_model.py
tests/problems/signal/: test_oscillator.py
tests/signal/: test_ode_signal_generator.py  test_signal_generator_discipline.py
(+53 files in other folders)
