[project]
name = "gemseo-calibration"
authors = [
    {name = "Matthias De Lozzo", email = "contact@gemseo.org"}
]
description = "Capability to calibrate GEMSEO disciplines from data."
readme = "README.md"
license = "LGPL-3.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
requires-python = ">=3.9, <3.13"
dependencies = [
    "gemseo[all] >=6,<7",
    "matplotlib",
    "numpy",
]

[dependency-groups]
dev = [
    "covdefaults",
    "pytest <9",
    "pytest-cov",
    "pytest-xdist",
]
doc = [
    "black",
    "griffe-fieldz",
    "griffe-inherited-docstrings",
    "griffe-fieldz",
    "markdown-exec[ansi]",
    "mike",
    "mkdocs-bibtex",
    "mkdocs-gallery",
    "mkdocs-gen-files",
    "mkdocs-include-markdown-plugin",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://gemseo.org"
Source = "https://gitlab.com/gemseo/dev/gemseo-calibration"
Issues = "https://gitlab.com/gemseo/dev/gemseo-calibration/-/issues"

[project.entry-points]
gemseo_plugins = { gemseo-calibration = "gemseo_calibration" }

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
